--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -24,39 +24,21 @@ jobs:
       - name: 🏗️ Build Vite app
         run: npm run build
 
-      - name: 📤 Upload build folder to EC2
+      - name: 📤 Copy build folder to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "build/*"
-          target: "/home/ubuntu/memes_app_frontend/build/"
+          target: "/home/ubuntu/react_app/build/"
 
-      - name: 🔁 Update EC2 Repo and Reload Nginx
+      - name: 🔁 Reload Nginx
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/ubuntu/memes_app_frontend
-
-            echo "🚀 Pulling latest code from GitHub..."
-            if [ -d .git ]; then
-              git fetch origin main
-              git reset --hard origin/main
-            else
-              echo "⚠️ No .git directory found — skipping git pull"
-            fi
-
-            echo "🧹 Cleaning old build files..."
-            rm -rf /home/ubuntu/memes_app_frontend/build/*
-
-            echo "📦 Copying new build files..."
-            mv /home/ubuntu/memes_app_frontend/build/* /home/ubuntu/memes_app_frontend/
-
-            echo "🔄 Reloading Nginx..."
-            sudo nginx -t && sudo systemctl reload nginx
-
-            echo "✅ Deployment complete!"
+            sudo nginx -t
+            sudo systemctl reload nginx
