--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy React (Vite) App to AWS EC2
+name: 🚀 Deploy React (Vite) App to AWS EC2 (Build on Server)
 
 on:
   push:
@@ -13,49 +13,24 @@ jobs:
       - name: 🧩 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: 📦 Install dependencies
-        run: npm ci
-
-      - name: 🏗️ Build Vite app
-        run: npm run build
-
-      - name: 🔁 Update source code on EC2 (git pull)
+      - name: 🔐 Connect to EC2 and deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "🚀 Updating source repo on EC2..."
-            cd /home/ubuntu/
-            if [ -d .git ]; then
-              git fetch origin main
-              git reset --hard origin/main
-            else
-              echo "⚠️ No Git repo found — skipping git pull"
-            fi
+            cd /home/ubuntu/react_app
 
-      - name: 📤 Copy new build folder to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: "build/*"
-          target: "/home/ubuntu//build/"
+            echo "🌀 Pulling latest code..."
+            git fetch origin main
+            git reset --hard origin/main
 
-      - name: 🔄 Reload Nginx
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            echo "🔄 Reloading Nginx..."
+            echo "📦 Installing dependencies..."
+            npm install
+
+            echo "🏗️ Building production build..."
+            npm run build
+
+            echo "🔁 Reloading Nginx..."
             sudo nginx -t && sudo systemctl reload nginx
-            echo "✅ Deployment successful!"
