--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy React (Vite) App to AWS EC2 (Build on Server)
+name: 🚀 Deploy React (Vite) App to AWS EC2
 
 on:
   push:
@@ -13,24 +13,41 @@ jobs:
       - name: 🧩 Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔐 Connect to EC2 and deploy
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: 📦 Install dependencies
+        run: npm ci
+
+      - name: 🏗️ Build Vite app
+        run: npm run build
+
+      - name: 🔐 Deploy to EC2 and update build
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/ubuntu/react_app
+            echo "🌍 Navigating to React app directory..."
+            cd /home/ubuntu/memes_app_frontend
 
-            echo "🌀 Pulling latest code..."
-            git pull origin main
-           
+            echo "🔄 Pulling latest code..."
+            git fetch origin main
+            git reset --hard origin/main
 
-            echo "📦 Installing dependencies..."
-            npm install
+            echo "🧹 Cleaning old build..."
+            rm -rf build
 
-            echo "🏗️ Building production build..."
+            echo "🧱 Rebuilding app on EC2..."
+            npm ci
             npm run build
 
             echo "🔁 Reloading Nginx..."
-            sudo nginx -t && sudo systemctl reload nginx
+            sudo nginx -t
+            sudo systemctl reload nginx
+
+      - name: ✅ Deployment Finished
+        run: echo "🚀 React app successfully deployed to EC2!"
