--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
       "name": "Memeverse Website",
       "version": "0.1.0",
       "private": true,
-      "proxy": "http://43.205.128.213",
-
+      "proxy": "https://getdownload.site",
       "dependencies": {
+            "@dicebear/collection": "^9.2.4",
+            "@dicebear/core": "^9.2.4",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -59,5 +60,4 @@
             "dev": "vite",
             "build": "vite build"
       }
-      
 }
